fixed photo alignemt

--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ a:hover {
 }
 
 img {
-  max-width: 95vw;
+  max-width: 100vw;
 }
 
 section {
